--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                   <div class="card p-3">
                     <div class="row">
                       <div class="col-2 col-sm-2 col-md-2">
-                        <img src="img/mentor.png" alt="" />
+                        <img class="mentor-img" src="img/mentor.png" alt="" />
                       </div>
                       <div class="col-9 col-sm-9 col-md-9">
                         <div class="cart-text">
@@ -373,7 +373,7 @@
                   <div class="card p-3">
                     <div class="row">
                       <div class="col-2 col-sm-2 col-md-2">
-                        <img src="img/mentor.png" alt="" />
+                        <img class="mentor-img" src="img/mentor.png" alt="" />
                       </div>
                       <div class="col-9 col-sm-9 col-md-9">
                         <div class="cart-text">
@@ -398,7 +398,7 @@
                   <div class="card p-3">
                     <div class="row">
                       <div class="col-2 col-sm-2 col-md-2">
-                        <img src="img/mentor.png" alt="" />
+                        <img class="mentor-img" src="img/mentor.png" alt="" />
                       </div>
                       <div class="col-9 col-sm-9 col-md-9">
                         <div class="cart-text">
