--- a/index.html
+++ b/index.html
@@ -92,26 +92,17 @@
         </div>
       </div>
     </header>
+
+ <!-- main section start -->
     <main>
-      <!-- bottom background section start -->
-      <!-- <div class="bg-dark-blue">
-        <div class="container">
-          <div class="row">
-            <div class="col-2 col-md-12 col-sm-12 col-lg-12"></div>
-          </div>
-        </div>
-      </div> -->
-
-      <!-- bottom background section end -->
-
-      <!-- Courses section start -->
+ <!-- Courses section start -->
       <section class="courses">
         <div class="container">
           <div class="content-title py-5">Our Courses</div>
           <div class="slider">
             <div class="course-slider">
               <div class="card rounded">
-                <img src="img/course-pic.png" class="card-img-top" alt="..." />
+                <img  src="img/course-pic.png" class="card-img-top course-image" alt="..." />
                 <div class="card-body">
                   <div class="card-title font-weight-bold">
                     Course name will come here in two lines max.
@@ -124,7 +115,7 @@
                 </div>
               </div>
               <div class="card rounded">
-                <img src="img/course-pic.png" class="card-img-top" alt="..." />
+                <img  src="img/course-pic.png" class="card-img-top course-image" alt="..." />
                 <div class="card-body">
                   <div class="card-title font-weight-bold">
                     Course name will come here in two lines max.
@@ -137,7 +128,7 @@
                 </div>
               </div>
               <div class="card rounded">
-                <img src="img/course-pic.png" class="card-img-top" alt="..." />
+                <img  src="img/course-pic.png" class="card-img-top course-image" alt="..." />
                 <div class="card-body">
                   <div class="card-title font-weight-bold">
                     Course name will come here in two lines max.
@@ -150,7 +141,7 @@
                 </div>
               </div>
               <div class="card rounded">
-                <img src="img/course-pic.png" class="card-img-top" alt="..." />
+                <img  src="img/course-pic.png" class="card-img-top course-image" alt="..." />
                 <div class="card-body">
                   <div class="card-title font-weight-bold">
                     Course name will come here in two lines max.
@@ -177,11 +168,7 @@
               <table>
                 <tr class="mt-5">
                   <td class="p-0 mt-0">
-                    <img
-                      style="border-radius: 50%; height: 48px; width: 46px;"
-                      src="img/content-icon.png"
-                      alt=""
-                    />
+                    <img class="content-icon" src="img/content-icon.png" alt=""/>
                   </td>
                   <td class="pl-3">
                     <h5 class="font-weight-bold">Live & Recorded Classes</h5>
@@ -195,16 +182,7 @@
 
                 <tr class="mt-5">
                   <td class="p-0 mt-0">
-                    <img
-                      style="
-                        border-radius: 50%;
-                        height: 48px;
-                        width: 46px;
-                        margin-top: -2px;
-                      "
-                      src="img/content-icon.png"
-                      alt=""
-                    />
+                    <img class="content-icon" src="img/content-icon.png" alt=""/>
                   </td>
 
                   <td class="pl-3">
@@ -222,16 +200,7 @@
 
                 <tr class="mt-5">
                   <td class="p-0 mt-0">
-                    <img
-                      style="
-                        border-radius: 50%;
-                        height: 48px;
-                        width: 46px;
-                        margin-top: -2px;
-                      "
-                      src="img/content-icon.png"
-                      alt=""
-                    />
+                    <img class="content-icon" src="img/content-icon.png" alt="" />
                   </td>
 
                   <td class="pl-3">
@@ -248,7 +217,7 @@
             </div>
             <div class="col-4 col-sm-4 col-md-4 col-lg-4 visible">
               <div class="text-right ">
-                <img src="img/content-image.png" alt="content-images" />
+                <img class="content-image" src="img/content-image.png" alt="content-images" />
               </div>
             </div>
           </div>
@@ -258,7 +227,7 @@
           <div class="row">
             <div class="col-4 col-sm-4 col-md-4 col-lg-4 visible">
               <div class="text-right">
-                <img src="img/content-image.png" alt="content-images" />
+                <img class="content-image" src="img/content-image.png" alt="content-images" />
               </div>
             </div>
 
@@ -266,11 +235,7 @@
               <table>
                 <tr class="mt-5">
                   <td class="pl-3 pt-0 mt-0">
-                    <img
-                      style="border-radius: 50%; height: 48px; width: 46px;"
-                      src="img/content-icon.png"
-                      alt=""
-                    />
+                    <img class="content-icon" src="img/content-icon.png" alt=""/>
                   </td>
                   <td class="pl-3">
                     <h5 class="font-weight-bold">Doubt clearing sessions</h5>
@@ -284,11 +249,7 @@
 
                 <tr class="mt-5">
                   <td class="pl-3 pt-0 mt-0">
-                    <img
-                      style="border-radius: 50%; height: 48px; width: 46px;"
-                      src="img/content-icon.png"
-                      alt=""
-                    />
+                    <img class="content-icon" src="img/content-icon.png" alt=""/>
                   </td>
 
                   <td class="pl-3">
@@ -306,11 +267,7 @@
 
                 <tr class="pt-5 mt-5">
                   <td class="pl-3 pt-0 mt-0">
-                    <img
-                      style="border-radius: 50%; height: 48px; width: 46px;"
-                      src="img/content-icon.png"
-                      alt=""
-                    />
+                    <img class="content-icon" src="img/content-icon.png" alt=""/>
                   </td>
 
                   <td class="pl-3">
@@ -344,6 +301,8 @@
               </div>
               <div class="container">
                 <div class="mentor-slider">
+
+                  
                   <!-- single-slider start -->
                   <div class="card p-3">
                     <div class="row">
@@ -368,6 +327,10 @@
                     </div>
                   </div>
                   <!-- single-slider end -->
+
+
+
+
 
                   <!-- single-slider start -->
                   <div class="card p-3">
@@ -408,12 +371,8 @@
                           their programs one can learn to fly. Best wishes to
                           Opdemy!
                         </div>
-                        <div class="card-text font-weight-bold">
-                          HIMANSHU KAUSHIK
-                        </div>
-                        <div class="card-text font-weight-bold h6">
-                          IAS 2018
-                        </div>
+                        <div class="card-text font-weight-bold">HIMANSHU KAUSHIK</div>
+                        <div class="card-text font-weight-bold h6">IAS 2018</div>
                       </div>
                     </div>
                   </div>
@@ -432,11 +391,11 @@
             <div class="col-6 col-sm-6 col-md-6">
               <h2 class="h2 text-light">LEARN ON THE GO</h2>
               <h2 class="h1 text-light">Download our app now</h2>
-              <img class="google-play" src="img/google-play-badge.svg" alt="" />
+              <img class="google-play" src="img/google-play-badge.svg" alt="google-play" />
             </div>
             <div class="col-6 col-sm-6 col-md-6">
               <div class="text-right">
-                <img src="img/mobile.png" alt="" />
+                <img src="img/mobile.png" alt="mobile-google-play" />
               </div>
             </div>
           </div>
@@ -447,32 +406,13 @@
     <footer class="footer">
       <div class="container-fluid no-gutters">
         <nav class="navbar navbar-expand-lg bg-transparent">
-          <a
-            style="margin-left: 50px; margin-top: 38px;"
-            class="navbar-brand bg-transparent"
-            href="#"
-            ><img src="img/opdemy-logo.svg"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
+          <a class="navbar-brand bg-transparent logo" href="#"><img src="img/opdemy-logo.svg" alt="logo"/></a>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link text-light" href="#">Privacy Policy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link btn btn-md text-light login-btn" href="#"
-                >Terms</a
-              >
+              <a class="nav-link btn btn-md text-light login-btn" href="#">Terms</a>
             </li>
           </ul>
         </nav>
