responsive css added

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <!-- navbar start -->
             <nav class="navbar navbar-expand-lg bg-transparent">
               <a
-                class="navbar-brand bg-transparent"
+                class="navbar-brand bg-transparent logo"
                 href="#"
-                ><img src="img/opdemy-logo.svg"
+                ><img  src="img/opdemy-logo.svg"
               /></a>
               <button
                 class="navbar-toggler"
