--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="vendors/slick-1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="vendors/slick-1.8.1/slick/slick-theme.css" />
     <link rel="stylesheet" href="css/styles.css" />
-
     <link rel="shortcut icon" href="img/opdemy-logo.svg" type="image/x-icon" />
   </head>
   <body>
@@ -107,7 +106,7 @@
                   <div class="card-title font-weight-bold">
                     Course name will come here in two lines max.
                   </div>
-                  <div class="card-text">
+                  <div class="card-text limit-character ">
                     Course short description will come here in 3-4 lines. Course
                     short description will come here in 3-4.
                   </div>
@@ -364,7 +363,7 @@
                         <img class="mentor-img" src="img/mentor.png" alt="" />
                       </div>
                       <div class="col-9 col-sm-9 col-md-9">
-                        <div class="cart-text">
+                        <div class="cart-text ">
                           The guidance programs by Opdemy are one of a kind.
                           They provide education at the doorsteps of the needy
                           and marginalized aspirants. We all have wings but with
